--- a/monopods.html
+++ b/monopods.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="header inner-header">
+    <header class="header container inner-header">
       <nav>
-        <a>
-          <img src="img/logo.svg" class="logo" width="163" height="35" alt="Логотип магазина Девайс">
+        <a href="index.html" class="logo">
+          <img src="img/logo.svg" width="163" height="35" alt="Логотип магазина Девайс">
         </a>
         <div class="header-wrapper">
           <form action="index.html" method="post" class="search">
@@ -49,7 +49,7 @@
     </header>
 
     <main class="catalog">
-      <div class="title-wrapper">
+      <div class="title-wrapper container">
         <h1>Моноподы для селфи</h1>
         <ul class="breadcrumb">
           <li><a href="index.html" title="Главная">Главная</a></li>
@@ -58,8 +58,8 @@
         </ul>
       </div>
 <!-- Filter & Sort -->
-      <div class="main-wrap">
-        <section class="filter">
+      <div class="main-wrap container">
+        <section class="filter ">
           <h2>Фильтр:</h2>
           <form action="monopods.html" method="post">
             <fieldset>
@@ -110,10 +110,12 @@
         </section>
         <div class="inner-wrap">
           <section class="sort">
-            <h2>Сортировка:</h2>
-            <button type="button" class="active">По цене</button>
-            <button type="button">По типу</button>
-            <button type="button">По популярности</button>
+            <div class="sort-wrapper">
+              <h2>Сортировка:</h2>
+              <button type="button" class="active">По цене</button>
+              <button type="button">По типу</button>
+              <button type="button">По популярности</button>
+            </div>
             <div class="sort-direction">
               <button type="button">По возрастанию</button>
               <button type="button">По убыванию</button>
@@ -169,18 +171,22 @@
           </section>
           <section class="catalog-navigation">
             <h2 class="visually-hidden">Навигация по страницам товаров</h2>
-            <ul>
+            <ul class="outer-catalog-navigation">
               <li>
                 <a href="#" class="transition-direction">Назад</a>
               </li>
               <li>
-                <a href="#" class="page-number">1</a>
-              </li>
-              <li>
-                <a href="#" class="page-number inactive">2</a>
-              </li>
-              <li>
-                <a href="#" class="page-number inactive">3</a>
+                <ul class="inner-catalog-navigation">
+                  <li>
+                    <a href="#" class="page-number">1</a>
+                  </li>
+                  <li>
+                    <a href="#" class="page-number inactive">2</a>
+                  </li>
+                  <li>
+                    <a href="#" class="page-number inactive">3</a>
+                  </li>
+                </ul>
               </li>
               <li>
                 <a href="#" class="transition-direction">Вперед</a>
@@ -191,7 +197,7 @@
       </div>  <!-- end of main wrap -->
     </main>
     <footer class="footer">
-      <div class="footer-wrapper">
+      <div class="footer-wrapper container">
         <div class="footer-user-navigation">
           <a>
             <svg class="footer-logo" width="163" height="35" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 163 35">
