Личный проект: завершаем строить сетку на флексах
Внес правки согласно рекомендациям наставника

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <!-- Slider -->
     <section class="slider-popular container">
       <h2 class="visually-hidden">Популярные товары</h2>
-    	<div class="slider-popular-item active">
+    	<div class="slider-popular-item">
         <img src="img/slider-1.png" width="404" height="486" alt="Самая длинная палка для селфи">
         <div class="item-content">
           <span class="slide-number">01</span>
@@ -90,7 +90,7 @@
           </dl>
         </div>
       </div>
-    	<div class="slider-popular-item">
+    	<div class="slider-popular-item active">
         <img src="img/slider-3.png" width="526" height="334" alt="Квадрокоптер оснащеный мощным лазером">
         <div class="item-content">
           <span class="slide-number">03</span>
@@ -186,23 +186,23 @@
         <h2 class="visually-hidden">Наши партнеры</h2>
         <ul>
           <li>
-            <a href="#" class="partners-link-dji" target="_blank">
-              <img src="img/logo-1-grayscale.png" width="260" height="100" alt="Логотип компании Dji">
+            <a href="#" class="partners-link" target="_blank">
+              <img src="img/logo-1.png" width="260" height="100" alt="Логотип компании Dji">
             </a>
           </li>
           <li>
-            <a href="#" class="partners-link-spgadgets" target="_blank">
-              <img src="img/logo-2-grayscale.png" width="260" height="100" alt="Логотип компании SP Gadgets">
+            <a href="#" class="partners-link" target="_blank">
+              <img src="img/logo-2.png" width="260" height="100" alt="Логотип компании SP Gadgets">
             </a>
           </li>
           <li>
-            <a href="#" class="partners-link-gopro" target="_blank">
-              <img src="img/logo-3-grayscale.png" width="260" height="100" alt="Логотип компании Go Pro">
+            <a href="#" class="partners-link" target="_blank">
+              <img src="img/logo-3.png" width="260" height="100" alt="Логотип компании Go Pro">
             </a>
           </li>
           <li>
-            <a href="#" class="partners-link-vive" title="сайт компании Vive" target="_blank">
-              <img src="img/logo-4-grayscale.png" width="260" height="100" alt="Логотип компании Vive">
+            <a href="#" class="partners-link" title="сайт компании Vive" target="_blank">
+              <img src="img/logo-4.png" width="260" height="100" alt="Логотип компании Vive">
             </a>
           </li>
         </ul>
