Личный проект: завершаем строить сетку на флексаx
- Применение svg фильтра для галереи лого партнеров (IE11)
- Правки меню постраничной навигации в каталоге

--- a/monopods.html
+++ b/monopods.html
@@ -180,27 +180,20 @@
           </section>
           <section class="catalog-navigation">
             <h2 class="visually-hidden">Навигация по страницам товаров</h2>
-            <ul class="outer-catalog-navigation">
+            <div class="catalog-navigation-wrap">
+            <a href="#" class="transition-direction">Назад</a>
+            <ul class="inner-catalog-navigation">
               <li>
-                <a href="#" class="transition-direction">Назад</a>
+                <a href="#" class="page-number">1</a>
               </li>
               <li>
-                <ul class="inner-catalog-navigation">
-                  <li>
-                    <a href="#" class="page-number">1</a>
-                  </li>
-                  <li>
-                    <a href="#" class="page-number inactive">2</a>
-                  </li>
-                  <li>
-                    <a href="#" class="page-number inactive">3</a>
-                  </li>
-                </ul>
+                <a href="#" class="page-number inactive">2</a>
               </li>
               <li>
-                <a href="#" class="transition-direction">Вперед</a>
+                <a href="#" class="page-number inactive">3</a>
               </li>
             </ul>
+            <a href="#" class="transition-direction">Вперед</a>
           </section>
         </div> <!-- end of inner wrap -->
       </div>  <!-- end of main wrap -->
