--- a/index.html
+++ b/index.html
@@ -186,23 +186,51 @@
         <h2 class="visually-hidden">Наши партнеры</h2>
         <ul>
           <li>
-            <a href="#" class="partners-link" target="_blank">
-              <img src="img/logo-1.png" width="260" height="100" alt="Логотип компании Dji">
+            <a href="#" class="partners-link" target="_blank" title="Логотип компании Dji">
+              <svg width="260" height="100">
+                <defs>
+                  <filter id="svg-grayscale">
+                    <fecolormatrix type="saturate" values="0" />
+                  </filter>
+                </defs>
+                <image xlink:href="img/logo-1.png" class="partner-logo" width="100%" height="100%"/>
+              </svg>
             </a>
           </li>
           <li>
-            <a href="#" class="partners-link" target="_blank">
-              <img src="img/logo-2.png" width="260" height="100" alt="Логотип компании SP Gadgets">
+            <a href="#" class="partners-link" target="_blank" title="Логотип компании SP Gadgets">
+              <svg width="260" height="100">
+                <defs>
+                  <filter id="svg-grayscale">
+                    <fecolormatrix type="saturate" values="0" />
+                  </filter>
+                </defs>
+                <image xlink:href="img/logo-2.png" class="partner-logo" width="100%" height="100%"/>
+              </svg>
             </a>
           </li>
           <li>
-            <a href="#" class="partners-link" target="_blank">
-              <img src="img/logo-3.png" width="260" height="100" alt="Логотип компании Go Pro">
+            <a href="#" class="partners-link" target="_blank" title="Логотип компании Go Pro">
+              <svg width="260" height="100">
+                <defs>
+                  <filter id="svg-grayscale">
+                    <fecolormatrix type="saturate" values="0" />
+                  </filter>
+                </defs>
+                <image xlink:href="img/logo-3.png" class="partner-logo" width="100%" height="100%"/>
+              </svg>
             </a>
           </li>
           <li>
-            <a href="#" class="partners-link" title="сайт компании Vive" target="_blank">
-              <img src="img/logo-4.png" width="260" height="100" alt="Логотип компании Vive">
+            <a href="#" class="partners-link" target="_blank" title="Логотип компании Vive">
+              <svg width="260" height="100">
+                <defs>
+                  <filter id="svg-grayscale">
+                    <fecolormatrix type="saturate" values="0" />
+                  </filter>
+                </defs>
+                <image xlink:href="img/logo-4.png" class="partner-logo" width="100%" height="100%"/>
+              </svg>
             </a>
           </li>
         </ul>
