Личный проект: начинаем оформление декоративных элементов
Исправил кнопки и сделал модалки

--- a/monopods.html
+++ b/monopods.html
@@ -132,54 +132,64 @@
                 </li>
               </ul>
             </fieldset>
-            <button type="submit" class="button">Показать</button>
+            <div class="button-box">
+              <button type="submit" class="button">Показать</button>
+            </div>
           </form>
         </section>
         <div class="inner-wrap">
           <section class="catalog-items">
             <ul class="items-list">
               <li class="item">
-                <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
-                  <div class="item-description">
-                    <a href="#">
-                      <h3 class="item-title">Любительская селфи-палка</h3>
-                    </a>
-                    <p class="item-price">500 руб</p>
-                  </div>
-                <a href="#" class="button to-basket">В корзину</a>
+                <img class="item-foto" src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
+                <div class="item-description">
+                  <a href="#">
+                    <h3 class="item-title">Любительская селфи-палка</h3>
+                  </a>
+                  <p class="item-price">500 руб</p>
+                </div>
+                <div class="button-box">
+                  <a href="#" class="button to-basket">В корзину</a>
+                </div>
                 <a href="#" class="to-comparison">Добавить к сравнению</a>
               </li>
               <li class="item">
-                <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка ">
+                <img class="item-foto" src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка ">
                 <div class="item-description">
                   <a href="#">
                     <h3 class="item-title">Профессиональная селфи-палка </h3>
                   </a>
                   <p class="item-price">1500 руб</p>
                 </div>
-                <a href="#" class="button to-basket">В корзину</a>
+                <div class="button-box">
+                  <a href="#" class="button to-basket">В корзину</a>
+                </div>
                 <a href="#" class="to-comparison">Добавить к сравнению</a>
               </li>
               <li class="item">
-                <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
+                <img class="item-foto" src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
                 <div class="item-description">
                   <a href="#">
                     <h3 class="item-title">Непотопляемая селфи-палка</h3>
                   </a>
                   <p class="item-price">2500 руб</p>
                 </div>
-                <a href="#" class="button to-basket">В корзину</a>
+                <div class="button-box">
+                  <a href="#" class="button to-basket">В корзину</a>
+                </div>
                 <a href="#" class="to-comparison">Добавить к сравнению</a>
               </li>
               <li class="item">
-                <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+                <img class="item-foto" src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
                 <div class="item-description">
                   <a href="#">
                     <h3 class="item-title">Селфи-палка «Следуй за мной»</h3>
                   </a>
                   <p class="item-price">4900 руб</p>
                 </div>
-                <a href="#" class="button to-basket">В корзину</a>
+                <div class="button-box">
+                  <a href="#" class="button to-basket">В корзину</a>
+                </div>
                 <a href="#" class="to-comparison">Добавить к сравнению</a>
               </li>
             </ul>
