--- a/index.html
+++ b/index.html
@@ -273,27 +273,31 @@
 <!-- PopUp Write As -->
     <section class="modal-write-us">
       <h2 class="visually-hidden">Напишите нам</h2>
-      <button type="button">Закрыть</button>
+      <button type="button" class="close-modal" aria-label="Закрыть окно"></button>
       <form action="https://echo.htmlacademy.ru" method="post">
-        <p>
-          <label for="user-name">Ваше имя:</label>
-          <input type="text" name="user-name" id="user-name" placeholder="Имя Фамилия">
-        </p>
-        <p>
-          <label for="user-email">Ваш e-mail:</label>
-          <input type="email" name="user-email" id="user-email" placeholder="email@example.com">
-        </p>
-        <p>
+        <div class="modal-form-wrap">
+          <p>
+            <label for="user-name">Ваше имя:</label>
+            <input type="text" name="user-name" id="user-name" placeholder="Имя Фамилия">
+          </p>
+          <p>
+            <label for="user-email">Ваш e-mail:</label>
+            <input type="email" name="user-email" id="user-email" placeholder="email@example.com">
+          </p>
+        </div>
+        <p class="modal-textarea">
           <label for="user-content">Текст письма:</label>
-            <textarea name="user-content" id="user-content" rows="8" cols="80" placeholder="В свободной форме"></textarea>
+          <textarea name="user-content" id="user-content" rows="8" cols="80" placeholder="В свободной форме"></textarea>
         </p>
-        <button type="submit">Отправить</button>
+        <div class="button-box">
+          <button type="submit" class="button">Отправить</button>
+        </div>
       </form>
     </section>
 <!-- PopUp Map -->
     <section class="modal-map">
       <h2 class="visually-hidden">Карта</h2>
-      <button type="button">Закрыть</button>
+      <button type="button" class="close-modal" aria-label="Закрыть окно"></button>
       <img src="img/map-big.png" alt="Изображение карты">
     </section>
 <!-- footer -->
